--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
+        <li><a href="recipes/pancake.html">Pancake recipe</a></li>
+    </ul>
+   
+    
 </body>
 </html>
