link added to index.html

--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../resources/style.css">
     <title>Easy Pancake recipe</title>
 </head>
 <body>
@@ -13,7 +14,9 @@
         <img src="../images/lasagna.jpg" alt="pancake" width="200" height="150">
         <figcaption>Easy Pancake</figcaption>
     </figure>
-
+    <div class="steps">
+        <p class="pro">The process is .....</p>
+    </div>
      <h3>Ingredients</h3>
      <ul>
          <li>1 cup all-purpose flour  </li>
